Fix minor issue with height of inner achievement progress bar.
  Set the height of the inner achievement progress bars to be 100%
  instead of a fix height in pixels. This fixes a minor visual
  issue in which the inner bar may be one pixel too big or too small
  for the inside of the surrounding div on certain view/zoom sizes.

--- a/htdocs/themes/math4/achievements.scss
+++ b/htdocs/themes/math4/achievements.scss
@@ -20,7 +20,7 @@
 }
 
 .levelinnerbar {
-	height: 16px;
+	height: 100%;
 	background-color: var(--ww-achievement-level-color, #88D);
 }
 
@@ -46,7 +46,7 @@
 }
 
 .cheevoinnerbar {
-	height: 6px;
+	height: 100%;
 	background-color: var(--ww-achievement-level-color, #88D);
 }
 
